--- a/poc.html
+++ b/poc.html
@@ -1,3 +1,5 @@
 <script>
-    alert("poc");
+    var result = window.MyCenterJs.getPublicParams();
+    result += '\r\n' + window.MyCenterReward.getGeoLocation();
+    alert(result);
 </script>
