--- a/poc.html
+++ b/poc.html
@@ -1,5 +1,12 @@
 <script>
-    var result = window.MyCenterJs.getPublicParams();
-    result += '\r\n' + window.MyCenterReward.getGeoLocation();
-    alert(result);
+    try{
+        var result = window.MyCenterJs.getPublicParams();
+        result += '\r\n' + window.MyCenterReward.getGeoLocation();
+        alert(result);
+    }
+    catch (e) {
+        alert(e);
+    }
+
+
 </script>
